main/default/objects/Capital_Project__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer name lookup from Account record.</description>
    <inlineHelpText>Customer name lookup from Account record.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Capital Projects</relationshipLabel>
    <relationshipName>Capital_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>