main/default/objects/Capital_Project__c/fields/Additional_Revenue_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Additional_Revenue_Commitment__c</fullName>
    <label>Additional Revenue Commitment</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>