main/default/objects/Capital_Project__c/fields/Auto_Generate__c.field-meta.xml
<CustomField>
    <fullName>Auto_Generate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set to true when you want this to auto gen an icert on save</description>
    <label>Auto Generate</label>
    <type>Checkbox</type>
</CustomField>