main/default/objects/Capital_Project__c/fields/Capital_Cost_Data__c.field-meta.xml
<CustomField>
    <fullName>Capital_Cost_Data__c</fullName>
    <label>Capital Cost: Data</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>