main/default/objects/Capital_Project__c/fields/Capital_Project_Request_Version__c.field-meta.xml
<CustomField>
    <fullName>Capital_Project_Request_Version__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field to track the Capital Project number in SFDC. This will be updated via workflow field update to auto-increment.</description>
    <label>Capital Project Request Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>