main/default/objects/Capital_Project__c/fields/Capital_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Capital_Project_Type__c</fullName>
    <label>Capital Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARC</fullName>
            </value>
            <value>
                <fullName>ARC - Fulfilled</fullName>
            </value>
            <value>
                <fullName>ARC – NNI</fullName>
            </value>
            <value>
                <fullName>EdgeConneX</fullName>
            </value>
            <value>
                <fullName>MN CBD - ARC</fullName>
            </value>
            <value>
                <fullName>No Regrets – Business Parks</fullName>
            </value>
            <value>
                <fullName>No Regrets – Data Centers</fullName>
            </value>
            <value>
                <fullName>Customer Capital Project</fullName>
                <default>true</default>
                <label>Customer Capital Project</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>