main/default/objects/Capital_Project__c/fields/Current_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Step__c</fullName>
    <label>Current Step</label>
    <length>100</length>
    <type>Text</type>
</CustomField>