main/default/objects/Capital_Project__c/fields/Customer_Requested_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requested_Due_Date__c</fullName>
    <formula>Opportunity__r.Customer_Requested_Due_Date__c</formula>
    <label>Customer Requested Due Date</label>
    <type>Date</type>
</CustomField>