main/default/objects/Capital_Project__c/fields/Field_Engineering_Arizona_Required__c.field-meta.xml
<CustomField>
    <fullName>Field_Engineering_Arizona_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Route to Field Engineering Arizona if checkbox marked.</description>
    <inlineHelpText>Route to Field Engineering Arizona if checkbox marked.</inlineHelpText>
    <label>Field Engineering-Arizona Required</label>
    <type>Checkbox</type>
</CustomField>