main/default/objects/Capital_Project__c/fields/Field_Engineering_Oregon_Required__c.field-meta.xml
<CustomField>
    <fullName>Field_Engineering_Oregon_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Route to Field Engineering Oregon is checkbox marked.</description>
    <inlineHelpText>Route to Field Engineering Oregon is checkbox marked.</inlineHelpText>
    <label>Field Engineering-Oregon Required</label>
    <type>Checkbox</type>
</CustomField>