main/default/objects/Capital_Project__c/fields/iCert__c.field-meta.xml
<CustomField>
    <fullName>iCert__c</fullName>
    <formula>IF(iCERT_ID__c = &#39;&#39;,&#39;&#39;,HYPERLINK(&quot;http://icert/Details.aspx?RequestID=&quot;+iCERT_ID__c, iCERT_ID__c ,&quot;_new&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>iCert</label>
    <type>Text</type>
</CustomField>