main/default/objects/Capital_Project__c/fields/iCERT_ID__c.field-meta.xml
<CustomField>
    <fullName>iCERT_ID__c</fullName>
    <externalId>true</externalId>
    <label>iCERT ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>