main/default/objects/Capital_Project__c/fields/ICert_Property__c.field-meta.xml
<CustomField>
    <fullName>ICert_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICert Property</label>
    <referenceTo>Order_Property__c</referenceTo>
    <relationshipLabel>Capital Projects</relationshipLabel>
    <relationshipName>Capital_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>