main/default/objects/Capital_Project__c/fields/Infrastructure_Engineering_Needed__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Engineering_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infrastructure Engineering Needed</label>
    <type>Checkbox</type>
</CustomField>