main/default/objects/Capital_Project__c/fields/IRR__c.field-meta.xml
<CustomField>
    <fullName>IRR__c</fullName>
    <label>IRR</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>