main/default/objects/Capital_Project__c/fields/MRR_Amount__c.field-meta.xml
<CustomField>
    <fullName>MRR_Amount__c</fullName>
    <label>MRR Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>