main/default/objects/Capital_Project__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Capital Projects</relationshipLabel>
    <relationshipName>Capital_Projects4</relationshipName>
    <type>Lookup</type>
</CustomField>