main/default/objects/Capital_Project__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Capital Projects</relationshipLabel>
    <relationshipName>Capital_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>