main/default/objects/Capital_Project__c/fields/OSP_Engineering_Required__c.field-meta.xml
<CustomField>
    <fullName>OSP_Engineering_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OSP Engineering Required</label>
    <type>Checkbox</type>
</CustomField>