main/default/objects/Capital_Project__c/fields/Owner_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Owner_Sales_Channel__c</fullName>
    <formula>TEXT( Account__r.Account_Sales_Channel__c )</formula>
    <label>Owner Sales Channel</label>
    <type>Text</type>
</CustomField>