main/default/objects/Capital_Project__c/fields/Payback_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Payback_in_Months__c</fullName>
    <label>Payback in Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>