main/default/objects/Capital_Project__c/fields/Planned_Network_Ready__c.field-meta.xml
<CustomField>
    <fullName>Planned_Network_Ready__c</fullName>
    <label>Planned Network Ready</label>
    <type>Date</type>
</CustomField>