main/default/objects/Capital_Project__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <label>Project Description</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>