main/default/objects/Capital_Project__c/fields/Request_Title__c.field-meta.xml
<CustomField>
    <fullName>Request_Title__c</fullName>
    <label>Request Title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>