main/default/objects/Capital_Project__c/fields/Routing_Process__c.field-meta.xml
<CustomField>
    <fullName>Routing_Process__c</fullName>
    <description>Different types of projects have different routing steps.</description>
    <label>Routing Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Routing</fullName>
            </value>
            <value>
                <fullName>Accelerated-On-Net Active BAA</fullName>
            </value>
            <value>
                <fullName>Accelerated-Near-Net Profiled BAA</fullName>
            </value>
            <value>
                <fullName>Dark Fiber Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>