main/default/objects/Capital_Project__c/fields/Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>Submitted_On__c</fullName>
    <description>Capture Date and Time the Capital Project was submitting for approval/costing.</description>
    <inlineHelpText>Capture Date and Time the Capital Project was submitting for approval/costing.</inlineHelpText>
    <label>Submitted On</label>
    <type>DateTime</type>
</CustomField>