main/default/objects/Capital_Project__c/recordTypes/Customer_Build.recordType-meta.xml
<RecordType>
    <fullName>Customer_Build</fullName>
    <active>true</active>
    <description>Capital project for customer-specific builds</description>
    <label>Customer Build</label>
</RecordType>