main/default/objects/Capital_Project__c/recordTypes/Network_Build.recordType-meta.xml
<RecordType>
    <fullName>Network_Build</fullName>
    <active>true</active>
    <description>Capital project for engineering-initiated network builds.</description>
    <label>Network Build</label>
</RecordType>