main/default/objects/Capital_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>iCERT_ID__c</columns>
    <columns>Planned_Network_Ready__c</columns>
    <columns>Capital_Project_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>